# node-manager

./: .gitignore  Dockerfile  main.py  pyproject.toml  registry.py
services/: crypto.py  node_service.py  ssh_service.py  task_service.py  thread_service.py
services/db/: db_service.py  models.py  test_db_service.py
services/execution/: execution_factory.py  execution_strategy.py  local_execution_strategy.py  remote_execution_strategy.py
services/node/: node.py  node_role.py
services/task/: periodic_task.py  scheduled_task.py  simple_task.py  task.py  task_executor.py  task_factory.py  task_manager.py  task_scheduler.py  task_status.py
